--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.2.2",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "mongoose": "^7.0.3",
+    "mongoose-slug-generator": "^1.0.4",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
